--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 clap = "2.33.3"
 tonic = "0.5"
 anyhow = "1.0.23"
+fil_logger = "0.1"
+tokio = { version = "1.0", features = ["full"] }
 
 [build-dependencies]
 tonic-build = "0.5"
