--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ fil_logger = "0.1"
 tokio = { version = "1.0", features = ["full"] }
 log = "0.4.7"
 dirs = "2.0.2"
+strum = "0.23"
+strum_macros = "0.23"
 
 [build-dependencies]
 tonic-build = "0.5"
