--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = "2.33.3"
 tonic = "0.5"
+prost = "0.8"
 anyhow = "1.0.23"
 fil_logger = "0.1"
 tokio = { version = "1.0", features = ["full"] }
