--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+storage-proofs-core = { path = "./dep/rust-file-proofs/storage-proofs-core", version = "^10.0.0", default-features = false}
+filecoin-proofs = { path = "./dep/rust-file-proofs/filecoin-proofs", default-features = false }
 clap = "2.33.3"
 tonic = "0.5"
 prost = "0.8"
@@ -18,6 +20,9 @@ strum = "0.23"
 strum_macros = "0.23"
 bellperson = "0.18.0"
 thiserror = "1.0.6"
+serde = { version = "1.0", features = ["rc", "derive"] }
+serde_json = "1.0"
+semver = "0.11.0"
 
 [build-dependencies]
 tonic-build = "0.5"
