--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 storage-proofs-core = { path = "./dep/rust-file-proofs/storage-proofs-core", version = "^10.0.0", default-features = false}
 filecoin-proofs = { path = "./dep/rust-file-proofs/filecoin-proofs", default-features = false }
+storage-proofs-post = { path = "./dep/rust-file-proofs/storage-proofs-post", version = "^10.0.0", default-features = false }
 clap = "2.33.3"
 tonic = "0.5"
 prost = "0.8"
@@ -23,6 +24,8 @@ thiserror = "1.0.6"
 serde = { version = "1.0", features = ["rc", "derive"] }
 serde_json = "1.0"
 semver = "0.11.0"
+signal-hook = "0.3.10"
+futures = "0.3"
 
 [build-dependencies]
 tonic-build = "0.5"
