--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "window-post-snark-server"
+description = "Used to separate Snark Proof procedures in window-post of Filecoin."
 version = "0.1.0"
 edition = "2021"
+repository = "https://github.com/hxuchen/window-post-snark-server.git"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -26,6 +29,7 @@ serde_json = "1.0"
 semver = "0.11.0"
 signal-hook = "0.3.10"
 futures = "0.3"
+uuid = { version = "^0.8", features = ["serde", "v4"] }
 
 [build-dependencies]
 tonic-build = "0.5"
