--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,7 @@ lazy_static = "1.2"
 
 [build-dependencies]
 tonic-build = "0.5"
+
+[[bin]]
+name = "window-post-snark-server"
+path = "src/bin/main.rs"
