--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ readme = "README.md"
 storage-proofs-core = { path = "./dep/rust-file-proofs/storage-proofs-core", version = "^10.0.0", default-features = false}
 filecoin-proofs = { path = "./dep/rust-file-proofs/filecoin-proofs", default-features = false }
 storage-proofs-post = { path = "./dep/rust-file-proofs/storage-proofs-post", version = "^10.0.0", default-features = false }
+filecoin-hashers = { version = "^5.0.0", path = "./dep/rust-file-proofs/filecoin-hashers", default-features = false, features = ["poseidon", "sha256"] }
 clap = "2.33.3"
 tonic = "0.5"
 prost = "0.8"
@@ -31,6 +32,13 @@ signal-hook = "0.3.10"
 futures = "0.3"
 uuid = { version = "^0.8", features = ["serde", "v4"] }
 lazy_static = "1.2"
+rand_xorshift = "0.3.0"
+blstrs = "0.4.0"
+rand = "0.8"
+ff = "0.11.0"
+
+[dev-dependencies]
+tempfile = "3"
 
 [build-dependencies]
 tonic-build = "0.5"
